--- a/x0storekaios/index.html
+++ b/x0storekaios/index.html
@@ -98,7 +98,7 @@ button:active img {
 
 
 
-<div id="social" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); max-height: 200px; overflow: auto;">
+<div id="social" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); ">
   <script>
     (() => {
       const appsFile = 'https://joe-x5.github.io/x0-store-kaios/social/apps.json';
@@ -138,7 +138,7 @@ button:active img {
 <h1>📚 Education 📚</h1>
 
 
-  <div id="education" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); max-height: 200px; overflow: auto;">
+  <div id="education" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); ">
 
     <script>
     (() => {
@@ -182,7 +182,7 @@ button:active img {
 <h1>🎯 Our Games 🎮</h1>
 
 
-  <div id="games" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); max-height: 200px; overflow: auto;">
+  <div id="games" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); ">
     <script>
     (() => {
       const appsFile = 'https://joe-x5.github.io/x0-store-kaios/games/apps.json';
@@ -227,7 +227,7 @@ button:active img {
 <h1>🤖 Ai 🤖</h1>
 
 
-  <div id="ai" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); max-height: 200px; overflow: auto;">
+  <div id="ai" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); ">
     <script>
     (() => {
       const appsFile = 'https://joe-x5.github.io/x0-store-kaios/ai/apps.json';
@@ -271,7 +271,7 @@ button:active img {
 <h1>⚙️ Utility ⚙️</h1>
 
 
-  <div id="utility" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); max-height: 200px; overflow: auto;">
+  <div id="utility" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); ">
     <script>
     (() => {
       const appsFile = 'https://joe-x5.github.io/x0-store-kaios/utility/apps.json';
@@ -313,7 +313,7 @@ button:active img {
 <h1>⚙️ Tools ⚙️</h1>
 
 
-  <div id="tools" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); max-height: 200px; overflow: auto;">
+  <div id="tools" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));">
     <script>
     (() => {
       const appsFile = 'https://joe-x5.github.io/x0-store-kaios/tools/apps.json';
@@ -355,7 +355,7 @@ button:active img {
 <h1>📺 Multimedia 📼</h1>
 
 
-  <div id="multimedia" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); max-height: 200px; overflow: auto;">
+  <div id="multimedia" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); ">
     <script>
     (() => {
       const appsFile = 'https://joe-x5.github.io/x0-store-kaios/multimedia/apps.json';
@@ -398,7 +398,7 @@ button:active img {
 <h1>🔱 Hacks ⚠️</h1>
 
 
-  <div id="hacks" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); max-height: 200px; overflow: auto;">
+  <div id="hacks" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));">
     <script>
     (() => {
       const appsFile = 'https://joe-x5.github.io/x0-store-kaios/hacks/apps.json';
