--- a/x0allkaios/index.html
+++ b/x0allkaios/index.html
@@ -1,1 +1,166 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
+    <title>X0 Store KaiOS - All Apps</title>
+
+    <meta content="og.png" property="og:image"/>
+    <meta content="og.png" name="twitter:card"/>
+
+    <meta content="ca-pub-1786122365693674" name="google-adsense-account"/>
+    <meta content="yHxwPbEBzFfMooOWanGYYiIQyCu_4Ai9bGxLQ4SP07U" name="google-site-verification"/>
+
+    <link href="favicon.ico" rel="icon" type="image/x-icon"/>
+
+    <style>
+        /* Button Image Styles */
+        button img {
+            height: 48px;
+            width: 48px;
+            border-radius: 8px;
+            border: 2px solid black;
+            transition: transform 0.3s ease; /* Smooth transition for scale */
+        }
+
+        /* Button Styles */
+        button {
+            border: 2px solid black;
+            border-radius: 10px;
+            margin: 2px;
+            font-weight: bold;
+            background-color: white;
+            color: black;
+            cursor: pointer;
+            transition: all 0.3s ease; /* Smooth transition for all properties */
+            padding: 10px 20px;
+        }
+
+        /* Button Hover Effect */
+        button:hover {
+            background-color: #f0f0f0; /* Slight background change */
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); /* Soft shadow on hover */
+        }
+
+        /* Button Focus Effect */
+        button:focus {
+            border: 2px solid red;
+            border-radius: 20px;
+            margin: 5px;
+            font-weight: bold;
+            color: blue;
+            outline: none; /* Removes default outline */
+            box-shadow: 0px 0px 10px 2px rgba(255, 0, 0, 0.6); /* Red focus shadow */
+        }
+
+        /* Button Active Effect (click animation) */
+        button:active {
+            transform: scale(0.95); /* Slight shrink on click */
+            box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3); /* Stronger shadow when clicked */
+            transition: all 0.1s ease; /* Quick transition for active effect */
+        }
+
+        /* Image Click Effect (Scale on Click) */
+        button:active img {
+            transform: scale(0.9); /* Slightly scale down the image on click */
+        }
+
+        /* Fallback for broken images */
+        button.failed-to-load img {
+            content: url('favicon.ico'); /* Fallback image */
+        }
+
+    </style>
+
+    <script>
+        // Try loading the primary image and provide a fallback if it fails
+        function loadAppIcon(app, imgElement) {
+            const img = new Image();
+            img.src = app.icon;
+            img.onload = function () {
+                // Image loaded successfully
+                imgElement.src = app.icon;
+            };
+            img.onerror = function () {
+                // Image failed to load, use fallback
+                imgElement.src = 'favicon.ico'; // Use fallback icon
+            };
+        }
+
+        document.addEventListener('DOMContentLoaded', function () {
+            const categories = ['new-apps', 'education', 'social', 'games', 'ai', 'utility', 'tools', 'multimedia', 'hacks'];
+            categories.forEach(category => {
+                const appsFile = `https://joe-x5.github.io/x0-store-kaios/${category}/apps.json`;
+                const container = document.getElementById(category);
+                fetch(appsFile)
+                    .then(r => r.json())
+                    .then(apps => {
+                        apps.forEach(app => {
+                            const button = document.createElement('button');
+                            button.onclick = () => window.open(app.url, '_blank');
+
+                            const img = document.createElement('img');
+                            loadAppIcon(app, img); // Load app icon with fallback
+
+                            img.alt = app.name;
+                            img.style.marginRight = '12px';
+                            img.style.objectFit = 'contain';
+
+                            button.appendChild(img);
+                            button.appendChild(document.createTextNode(' ' + app.name));
+                            container.appendChild(button);
+                        });
+                    })
+                    .catch(err => console.error(`${category} load failed:`, err));
+            });
+        });
+    </script>
+</head>
+<body>
+    <div style="background-color: #f9f9f9; border-radius: 10px;  border:2px solid green; box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 10px; padding: 20px;">
+        <h1>Latest Apps And New Apps Updates 🔔</h1>
+        <div id="new-apps" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); "></div>
+    </div>
+    <br/>
+    <div style="background-color: #f9f9f9; border-radius: 10px;  border:2px solid green; box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 10px; padding: 20px;">
+        <h1>📚 Education 📚</h1>
+        <div id="education" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); "></div>
+    </div>
+    <br/>
+    <div style="background-color: #f9f9f9; border-radius: 10px; border:2px solid green; box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 10px; padding: 20px;">
+        <h1>📝 Social 💬</h1>
+        <div id="social" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); "></div>
+    </div>
+    <br/>
+    <div style="background-color: #f9f9f9; border-radius: 10px;  border:2px solid green; box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 10px; padding: 20px;">
+        <h1>🎯 Our Games 🎮</h1>
+        <div id="games" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); "></div>
+    </div>
+    <br/>
+    <div style="background-color: #f9f9f9; border-radius: 10px;  border:2px solid green; box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 10px; padding: 20px;">
+        <h1>🤖 Ai 🤖</h1>
+        <div id="ai" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); "></div>
+    </div>
+    <br/>
+    <div style="background-color: #f9f9f9; border-radius: 10px;  border:2px solid green; box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 10px; padding: 20px;">
+        <h1>⚙️ Utility ⚙️</h1>
+        <div id="utility" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); "></div>
+    </div>
+    <br/>
+    <div style="background-color: #f9f9f9; border-radius: 10px;  border:2px solid green; box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 10px; padding: 20px;">
+        <h1>⚙️ Tools ⚙️</h1>
+        <div id="tools" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); "></div>
+    </div>
+    <br/>
+    <div style="background-color: #f9f9f9; border-radius: 10px;  border:2px solid green; box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 10px; padding: 20px;">
+        <h1>📺 Multimedia 📼</h1>
+        <div id="multimedia" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); "></div>
+    </div>
+    <br/>
+    <div style="background-color: #f9f9f9; border-radius: 10px;  border:2px solid green; box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 10px; padding: 20px;">
+        <h1>💻 Hacks 🛠️</h1>
+        <div id="hacks" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); "></div>
+    </div>
+</body>
+</html>
 
