--- a/x0allkaios/index.html
+++ b/x0allkaios/index.html
@@ -83,7 +83,7 @@
             };
             img.onerror = function () {
                 // Image failed to load, use fallback
-                imgElement.src = 'favicon.ico'; // Use fallback icon
+                imgElement.src = '/favicon.ico'; // Use fallback icon
             };
         }
 
