--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             align-items: center;
             color: white;
             text-align: center;
-            overflow: hidden;
+            overflow: auto;
             animation: gradient-animation 15s ease infinite;
         }
 
