Edit file index2.html

--- a/index2.html
+++ b/index2.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GitHub Repository Viewer</title>
+
+
+  <link href='/manifest.json' rel='manifest'/>
+
+
+
     <style>
         /* Styles omitted for brevity; you can use the previous styles. */
     </style>
