--- a/404.html
+++ b/404.html
@@ -7,6 +7,11 @@
 
   <link href='/manifest.json' rel='manifest'/>
 
+  <link href='/manifest.webmanifest' rel='manifest'/>
+
+    <script src="https://static.kaiads.com/ads-sdk/ads-sdk.v5.min.js"></script> 
+
+<script src="/kai-ads.js"></script>
 
 <style>
     /* Basic Reset */
